code cleaning, simplifications, JavaDoc, ...